--- a/FrontEnd/public/index.html
+++ b/FrontEnd/public/index.html
@@ -2,14 +2,14 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="icon" href="%PUBLIC_URL%/favicon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
       content="Web site created using create-react-app"
     />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/favicon.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
@@ -17,7 +17,7 @@
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
     <!-- favicon -->
-    <link rel="shortcut icon" href="%PUBLIC_URL%/assets/images/favicon.png" type="image/x-icon">
+    <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.png">
     <!-- bootstrap -->
     <link rel="stylesheet" href="%PUBLIC_URL%/assets/css/bootstrap.min.css">
     <!-- Plugin css -->
@@ -43,7 +43,7 @@
     <!-- main -->
     <script src="%PUBLIC_URL%/assets/js/main.js"></script>
 
-    <title>React App</title>
+    <title>Metafomos</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
